--- a/ansible/roles/kubernetes-nginx/tasks/main.yaml
+++ b/ansible/roles/kubernetes-nginx/tasks/main.yaml
@@ -2,5 +2,9 @@
     file: path="/etc/nginx/conf.d" state=directory owner=root
   - name: copy backend configuration 
     copy: src=backend.conf dest=/etc/nginx/conf.d/
+  - name: copy nginx.crt 
+    copy: src=nginx.crt dest=/etc/nginx/conf.d/
+  - name: copy nginx.key
+    copy: src=nginx.key dest=/etc/nginx/conf.d/
   - name: copy manifest 
     copy: src=nginx-main.yaml dest=/etc/kubernetes/manifests/
