--- a/ansible/deploy-swarm-dev.yaml
+++ b/ansible/deploy-swarm-dev.yaml
@@ -1,7 +1,7 @@
 - hosts: manager 
   roles:
       - docker-swarm 
-  remote_user: ubuntu 
+  remote_user: ec2-user 
   become: yes
   become_user: root
   become_method: sudo
@@ -9,7 +9,7 @@
 - hosts: consul 
   roles:
       - docker-swarm 
-  remote_user: ubuntu 
+  remote_user: ec2-user
   become: yes
   become_user: root
   become_method: sudo
@@ -17,7 +17,7 @@
 - hosts: node 
   roles:
       - docker-swarm 
-  remote_user: ubuntu 
+  remote_user: ec2-user
   become: yes
   become_user: root
   become_method: sudo
