--- a/ansible/roles/docker-swarm/tasks/main.yaml
+++ b/ansible/roles/docker-swarm/tasks/main.yaml
@@ -2,8 +2,10 @@
     yum: name=* state=latest 
   - name: download docker 
     get_url: url=https://get.docker.com dest=/tmp/getdocker.sh mode=0755
-  - name: install docker
-    shell: /tmp/getdocker.sh 
-  - name:  docker daemon
-    shell: docker daemon -H tcp://0.0.0.0:2375 -H unix:///var/run/docker.sock 
+  #- name: install docker
+  #  shell: /tmp/getdocker.sh 
+  - name:  docker sysconfig
+    file: src=docker.sysconfig dst=/etc/sysconfig/docker
+  - name: start docker
+    servicece: name=docker enabled=yes state=started
 
