--- a/ansible/deploy-swarm-dev.yaml
+++ b/ansible/deploy-swarm-dev.yaml
@@ -8,7 +8,8 @@
 
 - hosts: consul 
   roles:
-      - docker-swarm 
+      - docker-swarm
+      - docker-consul 
   remote_user: ec2-user
   become: yes
   become_user: root
