--- a/ansible/roles/docker-swarm/tasks/main.yaml
+++ b/ansible/roles/docker-swarm/tasks/main.yaml
@@ -8,4 +8,6 @@
     file: src=docker.sysconfig dest=/etc/sysconfig/docker
   - name: start docker
     service: name=docker enabled=yes state=started
+  - name: add user 
+    shell: usermod -aG docker ec2-user
 
