--- a/ansible/deploy-swarm-dev.yaml
+++ b/ansible/deploy-swarm-dev.yaml
@@ -1,7 +1,7 @@
 - hosts: manager 
   roles:
       #- docker-swarm
-      - docker-manager
+      #"- docker-manager
   remote_user: ec2-user 
   become: yes
   become_user: root
@@ -10,7 +10,7 @@
 - hosts: consul 
   roles:
       #- docker-swarm
-        #- docker-consul
+      #- docker-consul
   remote_user: ec2-user
   become: yes
   become_user: root
@@ -18,7 +18,8 @@
 
 - hosts: node 
   roles:
-      #- docker-swarm 
+      #- docker-swarm
+      - docker-node 
   remote_user: ec2-user
   become: yes
   become_user: root
