--- a/ansible/deploy-swarm-dev.yaml
+++ b/ansible/deploy-swarm-dev.yaml
@@ -1,7 +1,7 @@
 - hosts: consul 
   roles:
       - docker-swarm
-      - docker-consul
+        #    - docker-consul
   remote_user: ec2-user
   become: yes
   become_user: root
