--- a/ansible/deploy-swarm-dev.yaml
+++ b/ansible/deploy-swarm-dev.yaml
@@ -1,24 +1,28 @@
+- hosts: manager 
+  roles:
+      - docker
+      - swarm
+      - swarm-manager
+  remote_user: ubuntu 
+  become: yes
+  become_user: root
+  become_method: sudo
 - hosts: consul 
   roles:
-      - docker-swarm
-        #    - docker-consul
-  remote_user: ec2-user
+      - docker
+      - swarm
+      - swarm-consul
+  remote_user: ubuntu
   become: yes
   become_user: root
   become_method: sudo
 
 - hosts: node 
   roles:
-      - docker-swarm
-      - docker-node 
-  remote_user: ec2-user
-  become: yes
-  become_user: root
-  become_method: sudo
-- hosts: manager 
-  roles:
-      - docker-manager
-  remote_user: ec2-user 
+      - docker
+      - swarm
+      - swarm-node 
+  remote_user: ubuntu
   become: yes
   become_user: root
   become_method: sudo
