--- a/ansible/roles/docker/tasks/main.yaml
+++ b/ansible/roles/docker/tasks/main.yaml
@@ -5,7 +5,7 @@
   - name: add key
     apt_key: id=58118E89F3A912897C070ADBF76221572C52609D keyserver=hkp://p80.pool.sks-keyservers.net:80
   - name: copy docker repo
-    copy: src=docker.list dest=/etc/apt/sources.list.d
+    copy: src=docker.list dest=/etc/apt/sources.list.d/
   - name: apt-get update
     apt: update_cache=yes
   - name: apt-get purge lxc-docker 
