--- a/ansible/deploy-swarm-dev.yaml
+++ b/ansible/deploy-swarm-dev.yaml
@@ -2,7 +2,8 @@
   roles:
       - docker
       - swarm
-        #- swarm-manager
+      - swarm-consul
+      - swarm-manager
   remote_user: ubuntu 
   become: yes
   become_user: root
