--- a/ansible/roles/swarm-node/tasks/main.yaml
+++ b/ansible/roles/swarm-node/tasks/main.yaml
@@ -1,5 +1,5 @@
   - name: Gather facts
     action: ec2_facts
   - name: run consul 
-    shell: "docker run -d swarm join --advertise={{ ansible_ec2_local_ipv4 }}:2375 consul://10.1.0.31:8500"
+    shell: "docker run -d swarm join --advertise={{ ansible_ec2_local_ipv4 }}:2375 consul://{{ consul_ip }}:8500"
 
