--- a/ansible/roles/swarm-manager/tasks/main.yaml
+++ b/ansible/roles/swarm-manager/tasks/main.yaml
@@ -2,3 +2,6 @@
     action: ec2_facts
   - name: run manager 
     shell: "docker run -d -p 4000:4000 swarm manage -H :4000 --replication --advertise {{ ansible_ec2_local_ipv4 }}:4000 consul://{{ consul_ip }}:8500"
+    register: result_manager
+    failed_when: "'is already in use' not in result_manager.stderr"
+
