--- a/ansible/deploy-swarm-dev.yaml
+++ b/ansible/deploy-swarm-dev.yaml
@@ -22,7 +22,7 @@
   roles:
       - docker
       - swarm
-        #- swarm-node 
+      - swarm-node 
   remote_user: ubuntu
   become: yes
   become_user: root
