--- a/ansible/roles/swarm-node/tasks/main.yaml
+++ b/ansible/roles/swarm-node/tasks/main.yaml
@@ -2,4 +2,6 @@
     action: ec2_facts
   - name: run consul 
     shell: "docker run -d swarm join --advertise={{ ansible_ec2_local_ipv4 }}:2375 consul://{{ consul_ip }}:8500"
+    register: result_node
+    failed_when: "'is already in use' not in result_node.stderr"
 
