--- a/ansible/roles/swarm-manager/tasks/main.yaml
+++ b/ansible/roles/swarm-manager/tasks/main.yaml
@@ -4,4 +4,8 @@
     shell: "docker run -d -p 4000:4000 swarm manage -H :4000 --replication --advertise {{ ansible_ec2_local_ipv4 }}:4000 consul://{{ consul_ip }}:8500"
     register: result_manager
     failed_when: "'is already in use' not in result_manager.stderr and 'port is already allocated' not in result_manager.stderr"
+  - name: run registry
+    shell: "docker run -d -p 5000:5000 --name registry registry:2"
+    register: result_registry
+    failed_when: "'is already in use' not in result_registry.stderr and 'port is already allocated' not in result_registry.stderr"
 
