--- a/ansible/roles/swarm-manager/tasks/main.yaml
+++ b/ansible/roles/swarm-manager/tasks/main.yaml
@@ -1,11 +1,13 @@
   - name: Gather facts
     action: ec2_facts
+  - name: certs directory
+    file: path=/certs state=directory mode=0755
+  - name: copy certs
+    copy: src="{{ item }}" dest=/certs
+    with_items:
+       - wildcart.crt
+       - wildcard.key
   - name: run manager 
     shell: "docker run -d -p 4000:4000 swarm manage -H :4000 --replication --advertise {{ ansible_ec2_local_ipv4 }}:4000 consul://{{ consul_ip }}:8500"
     register: result_manager
     failed_when: "'is already in use' not in result_manager.stderr and 'port is already allocated' not in result_manager.stderr"
-  - name: run registry
-    shell: "docker run -d -p 5000:5000 --name registry registry:2"
-    register: result_registry
-    failed_when: "'is already in use' not in result_registry.stderr and 'port is already allocated' not in result_registry.stderr"
-
