--- a/ansible/deploy-swarm-dev.yaml
+++ b/ansible/deploy-swarm-dev.yaml
@@ -4,6 +4,7 @@
       - swarm
       - swarm-consul
       - swarm-manager
+      - swarm-registry
   remote_user: ubuntu 
   become: yes
   become_user: root
