--- a/ansible/roles/swarm-manager/tasks/main.yaml
+++ b/ansible/roles/swarm-manager/tasks/main.yaml
@@ -5,7 +5,7 @@
   - name: copy certs
     copy: src="{{ item }}" dest=/certs
     with_items:
-       - wildcart.crt
+       - wildcard.crt
        - wildcard.key
   - name: run manager 
     shell: "docker run -d -p 4000:4000 swarm manage -H :4000 --replication --advertise {{ ansible_ec2_local_ipv4 }}:4000 consul://{{ consul_ip }}:8500"
