--- a/ansible/roles/swarm-node/tasks/main.yaml
+++ b/ansible/roles/swarm-node/tasks/main.yaml
@@ -3,5 +3,5 @@
   - name: run consul 
     shell: "docker run -d swarm join --advertise={{ ansible_ec2_local_ipv4 }}:2375 consul://{{ consul_ip }}:8500"
     register: result_node
-    failed_when: "'is already in use' not in result_node.stderr"
+    failed_when: "'is already in use' not in result_node.stderr and result_node.stdout_lines.exists == False"
 
