--- a/ansible/roles/swarm/tasks/main.yaml
+++ b/ansible/roles/swarm/tasks/main.yaml
@@ -1,4 +1,4 @@
   - name:  docker opts 
     copy: src=docker.sysconfig dest=/etc/default/docker
-    notify: restart docker
+    notify: docker-restart
 
