--- a/ansible/roles/swarm-node/tasks/main.yaml
+++ b/ansible/roles/swarm-node/tasks/main.yaml
@@ -4,7 +4,7 @@
     shell: "docker run -d swarm join --advertise={{ ansible_ec2_local_ipv4 }}:2375 consul://{{ consul_ip }}:8500"
     register: result_node
     #failed_when: "'is already in use' not in result_node.stderr and result_node.stdout_lines.exists == False"
-    iggnore_errors: true
+    ignore_errors: true
   - name: run swarm overlay network (open udp/icmp port in security group)
     shell: "docker network create --driver overlay --subnet=172.18.0.0/16 net-swarm-01"
     register: result_overlay
