--- a/ansible/roles/swarm-consul/tasks/main.yaml
+++ b/ansible/roles/swarm-consul/tasks/main.yaml
@@ -1,12 +1,9 @@
   - name: run consul
     docker: 
-      name: swarm-consul
+      name: consul
       image: progrium/consul
       state: started
       command: "-server -bootstrap"
       detach: True
       ports:
       - "8500:8500"    
-    #shell: docker run -d -p 8500:8500 --name=consul progrium/consul -server -bootstrap
-    register: result_consul
-    failed_when: "'is already in use' not in result_consul.stderr"
