--- a/ansible/roles/swarm-manager/tasks/main.yaml
+++ b/ansible/roles/swarm-manager/tasks/main.yaml
@@ -15,5 +15,9 @@
       state: started
       command: "manage -H :4000 --replication --advertise {{ ansible_ec2_local_ipv4 }}:4000 consul://{{ consul_ip }}:8500"
       detach: True
+      expose:
+      - 4000
       ports:
       - "4000:4000"
+      env:
+        SWARM_HOST: "2375"
