--- a/ansible/roles/swarm-consul/tasks/main.yaml
+++ b/ansible/roles/swarm-consul/tasks/main.yaml
@@ -5,5 +5,6 @@
       state: started
       command: "-server -bootstrap"
       detach: True
+      restart_policy: always
       ports:
       - "8500:8500"    
