--- a/ansible/roles/swarm-manager/tasks/main.yaml
+++ b/ansible/roles/swarm-manager/tasks/main.yaml
@@ -15,6 +15,7 @@
       state: started
       command: "manage -H :4000 --replication --advertise {{ ansible_ec2_local_ipv4 }}:4000 consul://{{ consul_ip }}:8500"
       detach: True
+      restart_policy: always
       expose:
       - 4000
       ports:
