--- a/ansible/roles/swarm-registry/tasks/main.yaml
+++ b/ansible/roles/swarm-registry/tasks/main.yaml
@@ -5,6 +5,7 @@
       image: registry:2
       state: started
       detach: True
+      restart_policy: always
       ports:
       - "5000:5000"
       volumes:
