--- a/ansible/deploy-swarm-dev.yaml
+++ b/ansible/deploy-swarm-dev.yaml
@@ -24,6 +24,9 @@
       - docker
       - swarm
       - swarm-node 
+  handlers:
+      - name: docker-restart 
+         service: name=docker state=restarted
   remote_user: ubuntu
   become: yes
   become_user: root
