--- a/ansible/roles/swarm/tasks/main.yaml
+++ b/ansible/roles/swarm/tasks/main.yaml
@@ -1,3 +1,4 @@
   - name:  docker opts 
     copy: src=docker.sysconfig dest=/etc/default/docker
-    notify: docker-restart
+  - name: start docker
+    service: name=docker enabled=yes state=started
