--- a/ansible/roles/swarm/tasks/main.yaml
+++ b/ansible/roles/swarm/tasks/main.yaml
@@ -1,4 +1,6 @@
   - name:  docker opts 
     copy: src=docker.sysconfig dest=/etc/default/docker
+  - name: hosts for registry 
+    copy: src=hosts dest=/etc/hosts
   - name: start docker
     service: name=docker enabled=yes state=restarted
