--- a/ansible/roles/swarm-node/tasks/main.yaml
+++ b/ansible/roles/swarm-node/tasks/main.yaml
@@ -1,5 +1,11 @@
   - name: Gather facts
     action: ec2_facts
+  - name: format device
+    filesystem: fstype=xfs dev="/dev/sdf"
+  - name: docker dir 
+    file: path=/var/lib/docker state=directory
+  - name: mount device
+    mount: name="/var/lib/docker" src="/dev/sdf" fstype=xfs opts=defaults,noatime state=present
   - name: run swarm node 
     #shell: "docker run --name swarm-{{ ansible_ec2_local_hostname }} -d swarm join --advertise={{ ansible_ec2_local_ipv4 }}:2375 consul://{{ consul_ip }}:8500"
     docker:
