--- a/ansible/roles/base/tasks/main.yaml
+++ b/ansible/roles/base/tasks/main.yaml
@@ -1,4 +1,4 @@
   - name: apt-get update
-    apt: name=* state=latest
+    apt: update_cache=yes 
   - name: install tools
     apt: name=iftop,apachetop,mlocate,s3cmd,htop,xfsprogs,telnet,dsniff state=latest 
