--- a/ansible/roles/swarm-node/tasks/main.yaml
+++ b/ansible/roles/swarm-node/tasks/main.yaml
@@ -7,10 +7,10 @@
       command: "join --advertise={{ ansible_ec2_local_ipv4 }}:2375 consul://{{ consul_ip }}:8500"
       detach: True
       restart_policy: always
-  #- name: run swarm overlay network (open udp/icmp port in security group)
-  #  shell: "docker network create --driver overlay --subnet=172.18.0.0/16 net-swarm-01"
-  #  register: result_overlay
-  #  run_once: true
+  - name: run swarm overlay network (open udp/icmp port in security group)
+    shell: "docker network create --driver overlay --subnet=172.18.0.0/16 net-swarm-01"
+    register: result_overlay
+    run_once: true
   - name: nginx conf dir 
     file: path=/etc/nginx/conf.d state=directory mode=0755
   - name: copy nginx conf 
