--- a/ansible/roles/swarm-manager/tasks/main.yaml
+++ b/ansible/roles/swarm-manager/tasks/main.yaml
@@ -13,7 +13,7 @@
       name: swarm-manager
       image: swarm
       state: started
-      command: "manage -H :4000 --replication --advertise {{ ansible_ec2_local_ipv4 }}:4000 consul://{{ consul_ip }}:8500"
+      command: "manage -H :4000 --cluster-opt swarm.overcommit=50 --replication --advertise {{ ansible_ec2_local_ipv4 }}:4000 consul://{{ consul_ip }}:8500"
       detach: True
       restart_policy: always
       expose:
