--- a/ansible/roles/swarm-ec2/tasks/main.yaml
+++ b/ansible/roles/swarm-ec2/tasks/main.yaml
@@ -15,6 +15,7 @@
         - device_name: /dev/xvda
           volume_size: "20"
         - device_name: /dev/xvdf
+          volume_type: "gp2"
           volume_size: "500"
       exact_count: "{{ count_swarm_nodes }}" 
       count_tag:
