--- a/ansible/roles/swarm-node/tasks/main.yaml
+++ b/ansible/roles/swarm-node/tasks/main.yaml
@@ -1,3 +1,5 @@
+  - name: Gather facts
+    action: ec2_facts
   - name: run swarm node 
     #shell: "docker run --name swarm-{{ ansible_ec2_local_hostname }} -d swarm join --advertise={{ ansible_ec2_local_ipv4 }}:2375 consul://{{ consul_ip }}:8500"
     docker:
@@ -46,3 +48,12 @@
       - 443:443
       volumes:
       - /etc/nginx/conf.d:/etc/nginx/conf.d
+  - name: Register node with elb 
+    sudo : no
+    local_action:
+      module: ec2_elb
+      instance_id: "{{ ansible_ec2_instance_id }}"
+      ec2_elbs: "swarm-elb"
+      state: 'present'
+      region : "{{ aws_region }}"
+      enable_availability_zone : "yes"
