--- a/ansible/deploy-swarm-dev.yaml
+++ b/ansible/deploy-swarm-dev.yaml
@@ -24,8 +24,8 @@
   roles:
       - base
       - docker
-      - swarm
-      - swarm-node 
+        #    - swarm
+        #    - swarm-node 
   remote_user: ubuntu
   become: yes
   become_user: root
