Add error page to nginx

--- a/ansible/roles/swarm-node/files/backend.conf
+++ b/ansible/roles/swarm-node/files/backend.conf
@@ -16,6 +16,11 @@ server {
   ssl_prefer_server_ciphers on;
   ssl_ciphers AES256+EECDH:AES256+EDH:!aNULL;
   add_header 'Access-Control-Allow-Origin' '*';
+  error_page 502 /502.html;
+  location = /502.html {
+    add_header 'Access-Control-Allow-Origin' '*';
+    rewrite ^ https://codepicnic.com/502;
+  }
 
 error_log /var/log/nginx/error.log warn;
 access_log  /var/log/nginx/access.log  main;
@@ -42,6 +47,11 @@ server {
   ssl_prefer_server_ciphers on;
   ssl_ciphers AES256+EECDH:AES256+EDH:!aNULL;
   add_header 'Access-Control-Allow-Origin' '*';
+  error_page 502 /502.html;
+  location = /502.html {
+    add_header 'Access-Control-Allow-Origin' '*';
+    rewrite ^ https://codepicnic.com/502;
+  }
 
 error_log /var/log/nginx/error.log warn;
 access_log  /var/log/nginx/access.log  main;
@@ -68,6 +78,11 @@ server {
   ssl_prefer_server_ciphers on;
   ssl_ciphers AES256+EECDH:AES256+EDH:!aNULL;
   add_header 'Access-Control-Allow-Origin' '*';
+  error_page 502 /502.html;
+  location = /502.html {
+    add_header 'Access-Control-Allow-Origin' '*';
+    rewrite ^ https://codepicnic.com/502;
+  }
 
 error_log /var/log/nginx/error.log warn;
 access_log  /var/log/nginx/access.log  main;
@@ -92,6 +107,11 @@ server {
   ssl_prefer_server_ciphers on;
   ssl_ciphers AES256+EECDH:AES256+EDH:!aNULL;
   add_header 'Access-Control-Allow-Origin' '*';
+  error_page 502 /502.html;
+  location = /502.html {
+    add_header 'Access-Control-Allow-Origin' '*';
+    rewrite ^ https://codepicnic.com/502;
+  }
 
 error_log /var/log/nginx/error.log warn;
 access_log  /var/log/nginx/access.log  main;
@@ -107,31 +127,6 @@ access_log  /var/log/nginx/access.log  main;
 
 }
 
-
-server {
-    listen 443;
-    server_name ~^(?<container>.*)\-(rails|ruby23|ruby22)\.swarm.codeground.xyz$;
-  ssl on;
-  ssl_certificate /etc/nginx/conf.d/nginx.crt;
-  ssl_certificate_key /etc/nginx/conf.d/nginx.key;
-  ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
-  ssl_prefer_server_ciphers on;
-  ssl_ciphers AES256+EECDH:AES256+EDH:!aNULL;
-  add_header 'Access-Control-Allow-Origin' '*';
-
-error_log /var/log/nginx/error.log warn;
-access_log  /var/log/nginx/access.log  main;
-
-    location / {
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection "upgrade";
-    proxy_http_version 1.1;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header Host $host;
-                proxy_pass http://$container:3000;
-    }
-
-}
 
 
 
