--- a/ansible/roles/docker/tasks/main.yaml
+++ b/ansible/roles/docker/tasks/main.yaml
@@ -31,3 +31,5 @@
     shell: usermod -aG docker ubuntu 
   - name: install docker-py
     pip: name=docker-py
+  - name: install docker compose
+    get_url: url=https://github.com/docker/compose/releases/download/1.6.2/docker-compose-Linux-x86_64 dest=/usr/local/bin/docker-compose mode=0755 
