--- a/ansible/roles/docker/tasks/main.yaml
+++ b/ansible/roles/docker/tasks/main.yaml
@@ -5,7 +5,7 @@
   - name: docker dir
     file: path=/var/lib/docker state=directory
   - name: mount device
-    mount: name="/var/lib/docker" src="/dev/xvdf" fstype=ext4 opts=defaults,noatime state=present
+    mount: name="/var/lib/docker" src="/dev/xvdf" fstype=xfs opts=defaults,noatime state=present
   - name: apt-get install reqs 
     apt: name=apt-transport-https,ca-certificates,python-pip state=present
   - name: add key
