--- a/ansible/roles/aws-monitoring-scripts/tasks/main.yaml
+++ b/ansible/roles/aws-monitoring-scripts/tasks/main.yaml
@@ -3,4 +3,4 @@
   - name: monitoring scripts
     get_url: url="http://aws-cloudwatch.s3.amazonaws.com/downloads/CloudWatchMonitoringScripts-1.2.1.zip"  dest=/opt/CloudWatchMonitoringScripts-1.2.1.zip mode=0755
   - name: unzip scripts
-    unarchive: src=/opt/CloudWatchMonitoringScripts-1.2.1.zip dest=/opt/  
+    unarchive: src=/opt/CloudWatchMonitoringScripts-1.2.1.zip dest=/opt/ copy=no 
