--- a/ansible/roles/swarm-autoscaling/tasks/main.yaml
+++ b/ansible/roles/swarm-autoscaling/tasks/main.yaml
@@ -19,3 +19,16 @@
       #vpc_subnet_id : "{{ subnet_swarm }}"
       assign_public_ip: yes
       instance_profile_name: "{{ ec2_iam_role }}"
+  - name: create asg  
+    ec2_asg:
+       name: "{{ asg_swarm_name }}"
+       load_balancers: [ 'elb-swarm-01']
+       availability_zones: [ 'us-east-1a' ]
+       launch_config_name: "{{ lc_swarm_name }}" 
+       min_size: 2
+       max_size: 10
+       desired_capacity: 2 
+    vpc_zone_identifier: [ 'subnet-abcd1234', 'subnet-1a2b3c4d' ]
+    tags:
+      - environment: production
+        propagate_at_launch: no
