--- a/ansible/roles/swarm-autoscaling/tasks/main.yaml
+++ b/ansible/roles/swarm-autoscaling/tasks/main.yaml
@@ -9,6 +9,8 @@
       ebs_optimized: "{{ ebs_optimized_swarm }}"
       user_data: |
           #!/bin/sh
+          rm /etc/docker/key.json
+          service docker restart
           cd /opt
           NODE_NAME=$(curl http://169.254.169.254/latest/meta-data/local-hostname) CONSUL_IP=172.21.2.90 NODE_IP=$(curl http://169.254.169.254/latest/meta-data/local-ipv4) docker-compose up -d
       volumes:
