--- a/ansible/roles/swarm-autoscaling/tasks/main.yaml
+++ b/ansible/roles/swarm-autoscaling/tasks/main.yaml
@@ -32,3 +32,13 @@
       desired_capacity: 2 
       vpc_zone_identifier: [ 'subnet-5a9d2e70' ]
       region: "{{ aws_region }}"
+  - name: create as policy
+    ec2_scaling_policy:
+      state: present
+      region: "{{ aws_region }}"
+      name: "asp-lowmemory"
+      adjustment_type: "ChangeInCapacity"
+      asg_name: "{{ asg_swarm_name }}" 
+      scaling_adjustment: -1
+      min_adjustment_step: 1
+      cooldown: 300 
