--- a/ansible/roles/swarm-ec2-ami/tasks/main.yaml
+++ b/ansible/roles/swarm-ec2-ami/tasks/main.yaml
@@ -10,9 +10,10 @@
         Name: "swarm-ami"
       region: "{{ aws_region }}"
       ebs_optimized: "no"
-          - device_name: /dev/xvdf
-            volume_type: "gp2"
-            volume_size: "500"
+      volumes:
+        - device_name: /dev/xvdf
+          volume_type: "gp2"
+          volume_size: "500"
       exact_count: "1" 
       count_tag:
         Name: "swarm-ami"
