--- a/ansible/create-swarm-ami.yaml
+++ b/ansible/create-swarm-ami.yaml
@@ -12,6 +12,7 @@
       - newrelic
       - swarm
       - swarm-node
+      - create-ami
   remote_user: ubuntu
   become: yes
   become_user: root
