--- a/ansible/roles/reboot/tasks/main.yaml
+++ b/ansible/roles/reboot/tasks/main.yaml
@@ -4,8 +4,7 @@
     shell: sleep 2 && shutdown -r now "Ansible updates triggered"
     async: 1
     poll: 0
-    sudo: true
     ignore_errors: true
   - name: Wait for SSH to come up
-    wait_for: host={{ ansible_ec2_local_ipv4 }} port=22 delay=60 timeout=320 state=started
-    connection: local
+    local_action: wait_for: host={{ ansible_ec2_local_ipv4 }} port=22 delay=60 timeout=320 state=started
+    sudo: false
