--- a/ansible/roles/reboot/tasks/main.yaml
+++ b/ansible/roles/reboot/tasks/main.yaml
@@ -6,5 +6,5 @@
     poll: 0
     ignore_errors: true
   - name: Wait for SSH to come up
-    local_action: wait_for: host={{ ansible_ec2_local_ipv4 }} port=22 delay=60 timeout=320 state=started
+    local_action: wait_for host={{ ansible_ec2_local_ipv4 }} port=22 delay=60 timeout=320 state=started
     sudo: false
