--- a/ansible/roles/create-ami/tasks/main.yaml
+++ b/ansible/roles/create-ami/tasks/main.yaml
@@ -8,6 +8,6 @@
         delete_on_termination: false
         volume_type: gp2
       register: swarm_ami
-    with_items: "{{ ec2.instances }}"
+    with_items: "{{ var_ec2.instances }}"
   - name: ami result
     debug: var=swarm_ami.results
